versioned_docs/version-2.0/reference/targets/pylint_source_plugin.mdx
---
title: pylint_source_plugin
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A Pylint plugin loaded through source code.

To load a source plugin:

```
1. Write your plugin. See http://pylint.pycqa.org/en/latest/how_tos/plugins.html.
2. Define a `pylint_source_plugin` target with the plugin's Python file(s) included in the
    `sources` field.
3. Add the parent directory of your target to the `root_patterns` option in the `[source]`
    scope. For example, if your plugin is at `build-support/pylint/custom_plugin.py`, add
    'build-support/pylint'. This is necessary for Pants to know how to tell Pylint to
    discover your plugin. See https://www.pantsbuild.org/docs/source-roots.
4. Add `load-plugins=$module_name` to your Pylint config file. For example, if your Python
    file is called `custom_plugin.py`, set `load-plugins=custom_plugin`. Set the `config`
    option in the `[pylint]` scope to point to your Pylint config file.
5. Set the option `source_plugins` in the `[pylint]` scope to include this target's
    address, e.g. `source_plugins = ["build-support/pylint:plugin"]`.
```

To instead load a third-party plugin, set the option `extra_requirements` in the `[pylint]`
scope (see https://www.pantsbuild.org/docs/python-linters-and-formatters). Set `load-plugins` in
your config file, like you&#x27;d do with a source plugin.

This target type is treated similarly to a `python_library` target. For example, Python linters
and formatters will run on this target.

You can include other targets in the `dependencies` field, so long as those targets are
third-party dependencies or are located in the same directory or a subdirectory.

Other targets can depend on this target. This allows you to write a `python_tests` target for
this code or a `python_distribution` target to distribute the plugin externally.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings that you can use to describe a target. For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tags='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target. Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecompatibilitycode}
</div>

## `compatibility`

<Field
    type_repr={`str | Iterable[str] | None`}
    default_repr={`None`}
>

A string for Python interpreter constraints on this target. This should be written in Requirement-style format, e.g. `CPython==2.7.*` or `CPython>=3.6,<4`. As a shortcut, you can leave off `CPython`, e.g. `>=2.7` will be expanded to `CPython>=2.7`. If this is left off, this will default to the option `interpreter_constraints` in the [python-setup] scope. See https://www.pantsbuild.org/docs/python-interpreter-compatibility.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this plugin depends on. Due to restrictions with Pylint plugins, these targets must either be third-party Python dependencies (https://www.pantsbuild.org/docs/python-third-party-dependencies) or be located within this target&#x27;s same directory or a subdirectory.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcescode}
</div>

## `sources`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

A list of files and globs that belong to this target. Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`. Example: `sources=['example.py', 'test_*.py', '!test_ignore.py']`.

</Field>

</span>
